--- a/client/src/map/user-info-details.module.css
+++ b/client/src/map/user-info-details.module.css
@@ -1,8 +1,31 @@
+.modal {
+  max-height: 20rem;
+  overflow-y: auto;
+  padding-right: 1rem;
+}
+
+.modal::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 1rem;
+  background-color: #fff;
+}
+
+.modal::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.modal::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--primary-foreground-color);
+}
+
 .list {
   list-style-type: none;
   padding: 0 0.5rem;
   color: #fff;
   margin-top: 10px;
+  border-top: 1px solid #f6be00;
 }
 
 .header {
@@ -11,7 +34,6 @@
   text-align: center;
   padding: 0.5rem;
   color: #fff;
-  border-bottom: 1px solid #f6be00;
 }
 
 .list > li {
